--- a/src/main/resources/views/tasks/edit.html
+++ b/src/main/resources/views/tasks/edit.html
@@ -71,6 +71,8 @@
               </div>
             </div>
 
+            <input type="hidden" name="csrfToken" th:value="${csrfToken}"/>
+
           </form>
         </div>
       </div>
